--- a/todo.html
+++ b/todo.html
@@ -16,5 +16,37 @@
             <li><a href="contact.html">Contact Us</a></li>
         </nav>
     </header>
+
+    <main class="container">
+    <section class="hero">
+      <h1>To-Do List</h1>
+      <p class="lead">Add tasks, remove them, and keep your list across refreshes.</p>
+    </section>
+
+    <section class="card" aria-labelledby="todo-title">
+      <h2 id="todo-title">Add a task</h2>
+
+      <div class="task-input-row">
+        <label for="taskInput" class="visually-hidden">New task</label>
+        <input id="taskInput" class="input" type="text" placeholder="Enter a new task" aria-label="Enter a new task" />
+        <button id="addTaskBtn" class="btn primary">Add Task</button>
+      </div>
+
+      <h3 style="margin-top:18px">Your Tasks</h3>
+      <ul id="taskList" class="task-list" aria-live="polite" aria-label="Task list">
+        <!-- tasks inserted here -->
+      </ul>
+
+      <div class="form-actions" style="margin-top:12px;">
+        <button id="clearAllBtn" class="btn ghost">Clear All</button>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <small>© 2025 WebDev Basics</small>
+  </footer>
+</body>
+</html>
 </body>
 </html>
