Enhanced the UI

--- a/contact.html
+++ b/contact.html
@@ -29,24 +29,24 @@
         <form id="contactForm" novalidate>
             <div class="form-row">
             <label for="name">Full name</label>
-            <input id="name" name="name" type="text" class="input" required aria-required="true" />
+            <input id="name" name="name" type="text" class="input" placeholder="Rishabh Arora" required aria-required="true" />
             </div>
 
             <div class="form-row">
             <label for="email">Email address</label>
-            <input id="email" name="email" type="email" class="input" required aria-required="true" />
+            <input id="email" name="email" type="email" class="input" placeholder = "xyz@email.in"required aria-required="true" />
             </div>
 
             <div class="form-row">
             <label for="message">Message</label>
-            <textarea id="message" name="message" class="input" rows="6" required aria-required="true" width = "fixed"></textarea>
+            <textarea id="message" name="message" class="input" rows="6" placeholder ="Say Hi to us!" required aria-required="true" width = "fixed"></textarea>
             </div>
 
             <div id="formMsg" class="form-msg" role="status" aria-live="polite"></div>
 
             <div class="form-actions">
-                <button type="submit" class="btn primary">Submit</button>
-                <button type="button" id="resetBtn" class="btn ghost">Reset</button>
+            <button type="submit" class="btn primary">Submit</button>
+            <button type="button" id="resetBtn" class="btn ghost">Reset</button>
             </div>            
         </form>
         </section>
