--- a/todo.html
+++ b/todo.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do list</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/main.js"></script>
-</head>
-<body>
-    <header>
-        <nav>
-            <li><a href="#">Home</a></li>
-            <li><a href="features.html">Features</a></li>
-            <li><a href="todo.html">To-do list</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </nav>
-    </header>
 
-    <main class="container">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>To-do list</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/main.js"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <li><a href="#">Home</a></li>
+      <li><a href="features.html">Features</a></li>
+      <li><a href="todo.html">To-do list</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </nav>
+  </header>
+
+  <main class="container">
     <section class="hero">
       <h1>To-Do List</h1>
       <p class="lead">Add tasks, remove them, and keep your list across refreshes.</p>
@@ -27,7 +29,6 @@
       <h2 id="todo-title">Add a task</h2>
 
       <div class="task-input-row">
-        <label for="taskInput" class="visually-hidden">New task</label>
         <input id="taskInput" class="input" type="text" placeholder="Enter a new task" aria-label="Enter a new task" />
         <button id="addTaskBtn" class="btn primary">Add Task</button>
       </div>
@@ -37,7 +38,7 @@
         <!-- tasks inserted here -->
       </ul>
 
-      <div class="form-actions" style="margin-top:12px;">
+      <div class="form-actions right-align" style="margin-top:12px;">
         <button id="clearAllBtn" class="btn ghost">Clear All</button>
       </div>
     </section>
@@ -47,6 +48,8 @@
     <small>© 2025 WebDev Basics</small>
   </footer>
 </body>
+
 </html>
 </body>
+
 </html>
