--- a/contact.html
+++ b/contact.html
@@ -29,12 +29,12 @@
         <form id="contactForm" novalidate>
             <div class="form-row">
             <label for="name">Full name</label>
-            <input id="name" name="name" type="text" class="input" placeholder="Rishabh Arora" required aria-required="true" />
+            <input id="name" name="name" type="text" class="input" placeholder="Full Name" required aria-required="true" />
             </div>
 
             <div class="form-row">
             <label for="email">Email address</label>
-            <input id="email" name="email" type="email" class="input" placeholder = "xyz@email.in"required aria-required="true" />
+            <input id="email" name="email" type="email" class="input" placeholder = "Email"required aria-required="true" />
             </div>
 
             <div class="form-row">
